# Storybuilder

./: .gitignore  README.md
builder/: README.md  SETUP.md  pyproject.toml
builder/docs/plans/: 2026-06-07-inline-writing-copilot.md  2026-06-07-timeline-auto-advance.md  2026-06-08-frontend-refactor.md  2026-06-08-refactor-LOG.md  2026-06-08-refactor-contract.md  2026-06-09-version-history.md  2026-06-10-diff-review.md
builder/docs/specs/: 2026-06-07-inline-writing-copilot-design.md  2026-06-07-timeline-auto-advance-design.md  2026-06-09-pipeline-redesign-design.md  2026-06-10-diff-review-design.md
builder/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
builder/frontend/src/: App.tsx  main.tsx
builder/frontend/src/app/: AppShell.tsx  CreatorProvider.tsx  EntityEditor.tsx  LaneCanvas.tsx  PartialEditBar.tsx  RowMenu.tsx  WriterShell.tsx  app.module.css  rowmenu.module.css  writer.module.css
builder/frontend/src/gallery/: Gallery.tsx  gallery.module.css
builder/frontend/src/lib/: api.ts  aspect.ts  const.ts  genActions.ts  md.ts  paraDiff.ts  pipeline.ts  useBuilder.ts  useCreator.ts
builder/frontend/src/styles/: global.css  tokens.css
builder/src/builder/: __init__.py  cli.py  const.py  main.py  service.py
builder/src/builder/api/: __init__.py  app.py  canon_routes.py  creator.py  gen_routes.py  graph_routes.py  (+2 more)
builder/tests/: test_assist.py  test_assist_ctx.py  test_autosave_retention.py  test_delete_project.py  test_gen_input.py  test_graph_match.py  test_modes.py  test_prompts.py  test_run_actions.py  test_timeline.py  test_version.py
(+156 files in other folders)
