[project]
name = "dnf-storybuilder"
version = "0.0.1"
description = "DNF 스토리빌더 본 툴 — 사건 순서·상관관계·확신도 확률 모델"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
